--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 </div>
- <iframe class="video" src="video/top1.mp4"  title="Iframe Example"></iframe>
+ <iframe class="video" src="top1.mp4"  title="Iframe Example"></iframe>
  <!--iframe class="video2" src="video/vidx.mp4"  title="Iframe Example"></iframe-->
  <!-- iframe class="video3" src="video/top.mp4"  title="Iframe Example"></iframe-->
 
