Conect page almost  finished

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<title>My Adventure Site</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="author" content="Stefan Toshkov">
-		<link rel="stylesheet"   type="text/css" href = "main.css" />
-
+  <meta name="author" content="Stefan Toshkov"/	>
+<script src="https://www.youtube.com/iframe_api"></script>
+	<link rel="stylesheet"   type="text/css" href = "main.css" />
 <body>
 <div class="body">
 
@@ -28,11 +28,12 @@
      </table>
 
 </div>
-<div class="into">
+
+<div id="into">
 <ul>
  <li><a href="index.html" style="text-decoration: none;" >Home</a></li>
- <li><a href="news.asp"  style="text-decoration: none;" >News</a></li>
- <li><a href="contact.asp"  style="text-decoration: none;" >Contact</a></li>
+ <li><a href="news.html"  style="text-decoration: none;" >News</a></li>
+ <li><a href="contacts.html"  style="text-decoration: none;" >Contact</a></li>
  <li><a href="about.asp"  style="text-decoration: none;" >About</a></li>
 </ul>
 </div>
@@ -63,4 +64,6 @@
 <p style="color: white;">Click the "Register" button and the form-data will be sent to a page on the
 server called "reg_db.php".</p>
   </div>
+
+
 </html>
