--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
     text-align: center;
     font-size: 86px;
     opacity: 0.9;
-    background-color: rgba(0, 0, 215, 0.4);"> Welcome to my Trainers Site
+    background-color: rgba(0, 0, 215, 0.4);"> Welcome to my Leaders Page
 
 	</h1>
 
@@ -31,7 +31,7 @@
 <div class="iconh">
 
 
-	 <img src="images/bike/golden.jpg" alt="golden">
+	 <img src="images/bike/hikingerst.jpeg" alt="golden">
 	       <h1  class="icon"> Dave Malkovich</h1>
 				 <p> Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis. Aliquam blandit etiam vel massa eget mollis. Donec at quam orci. Proin et semper metus consequat etiam.</p>
 
@@ -57,6 +57,41 @@
 
  </div>
 
+ <div class="iconh">
+
+
+ 	 <img src="images/bike/golden.jpg" alt="golden">
+ 	       <h1  class="icon"> Loren Smith Jr.</h1>
+ 				 <p> Morbi semper nisl et rbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis. Aliquam blandit etiam vel massa eget mollis. Donec at quam orci. Proin et semper metus consequat etiam.</p>
+
+ </div>
+
+ <div class="iconh">
+
+
+ 	 <img src="images/bike/kajakart2.jpeg" alt="golden">
+ 	       <h1  class="icon"> Moly Mileva</h1>
+ 				 <p> Morbi semper nisl et tasse platea dictumst.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis. Aliquam blandit etiam vel massa eget mollis. Donec at quam orci. Proin et semper metus consequat etiam.</p>
+
+ </div>
+
+ <div class="iconh">
+
+
+ 	 <img src="images/bike/kayakart2.jpeg" alt="golden">
+ 	       <h1  class="icon"> Dave Malkovich</h1>
+ 				 <p> Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis. Aliquam blandit etiam vel massa eget mollis. Donec at quam orci. Proin et semper metus consequat etiam.</p>
+
+ </div>
+
+ <div class="iconh">
+
+
+ 	 <img src="images/bike/kayak.jpg" alt="golden">
+ 	       <h1  class="icon"> Dave Malkovich</h1>
+ 				 <p> Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis.Morbi semper nisl et dictum cursus. In hac habitasse platea dictumst. Aliquam blandit etiam vel massa eget mollis. Aliquam blandit etiam vel massa eget mollis. Donec at quam orci. Proin et semper metus consequat etiam.</p>
+
+ </div>
 
 
 
