--- a/news.html
+++ b/news.html
@@ -38,7 +38,7 @@
  <li><a href="index.html" style="text-decoration: none;" >Home</a></li>
  <li><a href="news.html"  style="text-decoration: none;" >News</a></li>
  <li><a href="contacts.html"  style="text-decoration: none;" >Contact</a></li>
- <li><a href="about.asp"  style="text-decoration: none;" >About</a></li>
+ <li><a href="about.html"  style="text-decoration: none;" >About</a></li>
 </ul>
 </div>
 
@@ -47,14 +47,43 @@
 	    width: 69%;
     height: 100%;">
 </embed>
-
+<div class="advertise " style="
+    width: 12em;
+    height: 47em;
+    float: right;
+    margin: 2em;
+    background-color: rgb(255, 255, 255, 0.4 );
+    border-radius: 1em;
+    border: solid 2px white;
+">
+    <h2 style="position: relative;height: 105%;font-size: 4em;text-align: center;padding-top: 4em;"> Your ad HERE !!!</h2>
+    </div>
 <script>
  window.onload = function() {
     document.getElementById("intro").play();
 }
 </script>
 
+<footer style="
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    padding: 1em;
+    height: 2em;
+    bottom: 0px;"
+>
 
+<h1 style="width: 100%;
+    background-size: cover;
+    font-size: 1em;
+    position: relative;
+    top: 1em;
+    right: -41em;">
+This site was developed by Stefan Toshkov 2020
+</h1>
+
+</footer>
 
 
 </html>
