--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@ right: -1em;
 </div>
 <div id="into">
 <ul>
- <li><a href="index.html" style="text-decoration: none;" >Home</a></li>
- <li><a href="news.html"  style="text-decoration: none;" >News</a></li>
- <li><a href="contacts.html"  style="text-decoration: none;" >Contact</a></li>
- <li><a href="about.html"  style="text-decoration: none;" >About</a></li>
+ <li class="about" ><a href="index.html" style="text-decoration: none;" >Home</a></li>
+ <li class="about" ><a href="news.html"  style="text-decoration: none;" >News</a></li>
+ <li class="about" ><a href="contacts.html"  style="text-decoration: none;" >Contact</a></li>
+ <li class="about"  ><a href="about.html"  style="text-decoration: none;" >About</a></li>
 </ul>
 </div>
 <script>
@@ -80,7 +80,8 @@ right: -1em;
     document.getElementById("intro").play();
 }
 </script>
-
+<button id="clickme" onclick="location.href='https://credissimo.bg/';" style="
+">Apply NOW !!!</button>
 <footer style="
     position: fixed;
     width: 100%;
