--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </div>
 
-<div id="into">
+<div id="into2">
 <ul>
  <li><a href="index.html" style="text-decoration: none;" >Home</a></li>
  <li><a href="news.html"  style="text-decoration: none;" >News</a></li>
@@ -56,7 +56,7 @@
 <div class="form1">
 <h1 id="form1">!!! Register Now !!!</h1>
 
-<form class="form2"action="/">
+<form class="form2" action="https://softacademy.bg/">
 
 	<label for="fname">Full Name or Nickname!</label><br>
   <input placeholder=" John Smith... " type="text" id="fname" name="fname"><br><br>
@@ -86,9 +86,22 @@
 </form>
 
 <p style="color: white;">Click the "Register" button and the form-data will be sent to a page on the
-server called ""Hasta la vista"".</p>
+server called "Astalavista".</p>
   </div>
+<h2 style="    position: relative;
+    width: 9%;
+    font-size: 350%;
+    text-align: center;
+    bottom: -826px;
+    background-color: white;
+    opacity: 0.6;
+    left: 10px;
+    border: solid 3px white;
+    padding: inherit;"> Your ad HERE !!!</h2>
 
+
+
+		<button id="clickme" onclick="location.href='https://credissimo.bg/';" style="top:1%;">Apply NOW !!!</button>
 	<footer style="
 	    position: fixed;
 	    width: 100%;
