--- a/news.html
+++ b/news.html
@@ -47,6 +47,10 @@
 	    width: 69%;
     height: 100%;">
 </embed>
+
+<button id="clickme" onclick="location.href='https://credissimo.bg/';" style="top: 4%;width: 12em;left: 3em;">
+	Apply NOW !!!</button>
+
 <div class="advertise " style="
     width: 12em;
     height: 47em;
@@ -56,7 +60,7 @@
     border-radius: 1em;
     border: solid 2px white;
 ">
-    <h2 style="position: relative;height: 105%;font-size: 4em;text-align: center;padding-top: 4em;"> Your ad HERE !!!</h2>
+    <h2 style="position: relative;height: 105%;font-size: 3em;text-align: center;padding-top: 4em;"> Your ad HERE !!!</h2>
     </div>
 <script>
  window.onload = function() {
