--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ right: -1em;
 }
 </script>
 <button id="clickme" onclick="location.href='https://credissimo.bg/';" style="
-">Apply NOW !!!</button>
+">Apply NOW for your FREE Adventure  !!!</button>
 <footer style="
     position: fixed;
     width: 100%;
