--- a/contacts.html
+++ b/contacts.html
@@ -406,7 +406,7 @@ You are the light of the world...
 </p>
 </body>
 <button id="clickme" onclick="location.href='https://credissimo.bg/';"  style =" top: 3%;
-    left: 2em;">Apply NOW !!!</button>
+    left: 2em;">Apply NOW for your FREE Adventure  !!!</button>
 <script>
  window.onload = function() {
     document.getElementById("intro").play();
