--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="header" >
            	<h1 >Welcome to My Adventure Site</h1>
-				 <input  class="search" type=" checkbox" placeholder="Search" input="Search" >
+				 <input  class="search" type=" checkbox" placeholder="Search for FREE" input="Search" >
 			 </input  >
 	  </div>
 <!-- Navigation bar -->
@@ -99,7 +99,13 @@ server called "Astalavista".</p>
 
 
 
-		<button id="clickme" onclick="location.href='https://credissimo.bg/';" style="top:1%;">Apply NOW !!!</button>
+		<button id="clickme"
+		onclick="location.href='https://credissimo.bg/';"
+		style="top:1%;">Apply NOW for your FREE Adventure  !!!
+
+	   </button>
+
+
 	<footer style="
 	    position: fixed;
 	    width: 100%;
