--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
 </embed>
 
 <button id="clickme" onclick="location.href='https://credissimo.bg/';" style="top: 4%;width: 12em;left: 3em;">
-	Apply NOW !!!</button>
+	Apply NOW for your FREE Adventure  !!!</button>
 
 <div class="advertise " style="
     width: 12em;
